ejabberd (2.0.0-3) experimental; urgency=low

  * Increased S2S timeouts. Defaults seems to be too short.
  * Changed ownerchip of ejabberd config directory and SSL certificate to
    root:ejabberd and mode to to make sure they aren't overwritten by running
    ejabberd.
  * Remove an SSL certificate on package purge. It is assumed that it's a
    generated certificate, so the removal is unconditional.

 -- Sergei Golovan <sgolovan@debian.org>  Sat, 23 Feb 2008 20:59:47 +0300

ejabberd (2.0.0-2) experimental; urgency=low

  * Saved a little bit of resources by not starting ssl module which isn't
    used by ejabberd anymore.
  * Added several new variables to ejabberd script and default settings
    following upstream.
  * Added 'debug' option to ejabberdctl script which attaches Erlang shell to
    already running ejabberd server.
  * Removed useless README and /etc/ejabberd/ejabberdctl.cfg files from the
    binary package (/etc/ejabberd/ejabberdctl.cfg content is moved to
    /etc/default/ejabberd).
  * Added a patch which makes proxy65 module working with Erlang R12B.
  * Fixed position of override section in ejabberd.cfg and uncommented proxy65
    module (with adding restrictive options).

 -- Sergei Golovan <sgolovan@debian.org>  Fri, 22 Feb 2008 13:51:14 +0300

ejabberd (2.0.0-1) experimental; urgency=low

  * New upstream release.

 -- Sergei Golovan <sgolovan@debian.org>  Thu, 21 Feb 2008 18:36:46 +0300

ejabberd (1.1.4-6) unstable; urgency=low

  * Loosened build dependencies to make backporting to etch easier.
  * Added a requirement for $remote_fs into init.d script because ejabberd
    needs mounted /usr to run.
  * Added a patch which allows ODBC to work with Erlang R12B.
  * Clarified debconf messages (closes: #390206).
  * Added a notice about hostname change to README.Debian and included erlang
    node conversion utility to the binary package (closes: #457097).
  * Added a patch which allows to use certificate chain files for encrypted